--- a/nilmProject/templates/index.html
+++ b/nilmProject/templates/index.html
@@ -390,7 +390,7 @@
           <div class="row">
             <!-- Earnings (Monthly) Card Example -->
             {% for post in category_list %}
-            <div class="col-xs-12 col-lg-3 mb-4">
+            <div class="col-3 mb-4">
               <div class="card border-left-primary shadow h-100 py-2">
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
@@ -407,7 +407,7 @@
               </div>
             </div>
 
-            <div class="col-xs-12 col-lg-3 mb-4">
+            <div class="col-3 mb-4">
               <div class="card border-left-success shadow h-100 py-2">
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
@@ -433,7 +433,7 @@
           <div class="row">
            
             {% for post in category_list %}
-              <div class="col-xs-12 col-lg-3 mb-4">
+              <div class="col-3 mb-4">
                 <div class="card border-left-warning shadow h-100 py-2">
                   <div class="card-body">
                     <div class="row no-gutters align-items-center">
@@ -452,7 +452,7 @@
                 </div>
               </div>
 
-              <div class="col-xs-12 col-lg-3 mb-4">
+              <div class="col-3 mb-4">
                 <div class="card border-left-warning shadow h-100 py-2">
                   <div class="card-body">
                     <div class="row no-gutters align-items-center">
@@ -551,7 +551,7 @@
           <!-- Content Row -->
           <div class="row">
           <!-- Bar Chart -->
-            <div class="col-xl-6 col-lg-6">
+            <div class="col-6">
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
@@ -579,7 +579,7 @@
               </div>
             </div>
             <!-- Bar Chart -->
-            <div class="col-xl-6 col-lg-6">
+            <div class="col-6">
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
