--- a/nilmProject/templates/index_iawe.html
+++ b/nilmProject/templates/index_iawe.html
@@ -390,7 +390,7 @@
           <div class="row">
             <!-- Earnings (Monthly) Card Example -->
             {% for post in category_list %}
-            <div class="col-xs-12 col-lg-3 mb-4">
+            <div class="col-3 mb-4">
               <div class="card border-left-primary shadow h-100 py-2">
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
@@ -408,7 +408,7 @@
             </div>
 
 
-           <div class="col-xs-12 col-lg-3 mb-4">
+           <div class="col-3 mb-4">
                   <div class="card border-left-success shadow h-100 py-2">
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
@@ -433,7 +433,7 @@
           {% block content1 %}
           <div class="row">
             {% for post in category_list %}
-              <div class="col-xs-12 col-lg-3 mb-4">
+              <div class="col-3 mb-4">
                   <div class="card border-left-warning shadow h-100 py-2">
                     <div class="card-body">
                       <div class="row no-gutters align-items-center">
@@ -451,7 +451,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xs-12 col-lg-3 mb-4">
+                <div class="col-3 mb-4">
                   <div class="card border-left-warning shadow h-100 py-2">
                     <div class="card-body">
                       <div class="row no-gutters align-items-center">
@@ -469,7 +469,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xs-12 col-lg-3 mb-4">
+                <div class="col-3 mb-4">
                   <div class="card border-left-warning shadow h-100 py-2">
                     <div class="card-body">
                       <div class="row no-gutters align-items-center">
@@ -487,7 +487,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xs-12 col-lg-3 mb-4">
+                <div class="col-3 mb-4">
                   <div class="card border-left-warning shadow h-100 py-2">
                     <div class="card-body">
                       <div class="row no-gutters align-items-center">
@@ -512,7 +512,7 @@
           <div class="row">
 
             <!-- Area Chart -->
-            <div class="col-xs-12 col-xl-8 col-lg-7">
+            <div class="col-xl-8 col-lg-7">
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
@@ -541,7 +541,7 @@
             </div>
 
             <!-- Pie Chart -->
-            <div class="col-xs-12 col-xl-4 col-lg-5">
+            <div class="col-xl-4 col-lg-5">
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
@@ -585,7 +585,7 @@
           <!-- Content Row -->
           <div class="row">
           <!-- Bar Chart -->
-            <div class="col-xs-12 col-lg-6">
+            <div class="col-6">
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
@@ -613,7 +613,7 @@
               </div>
             </div>
             <!-- Bar Chart -->
-            <div class="col-xs-12 col-lg-6">
+            <div class="col-6">
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
