--- a/nilmProject/templates/index_ukdale.html
+++ b/nilmProject/templates/index_ukdale.html
@@ -389,7 +389,7 @@
           {% block content %}
           <div class="row">
             {% for post in category_list %}
-            <div class="col-xs-12 col-lg-6 mb-4">
+            <div class="col-6 mb-4">
               <div class="card border-left-primary shadow h-100 py-2">
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
@@ -405,7 +405,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-12 col-lg-6 mb-4">
+            <div class="col-6 mb-4">
                   <div class="card border-left-success shadow h-100 py-2">
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
@@ -430,7 +430,7 @@
           <div class="row">
              {% for post in category_list %}
                 {% for data in post.val %}
-                <div class="col-xs-12 col-lg-3 mb-4">
+                <div class="col-3 mb-4">
                   <div class="card border-left-warning shadow h-100 py-2">
                     <div class="card-body">
                       <div class="row no-gutters align-items-center">
@@ -529,7 +529,7 @@
           <!-- Content Row -->
           <div class="row">
           <!-- Bar Chart -->
-            <div class="col-xs-12 col-lg-6">
+            <div class="col-6">
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
@@ -557,7 +557,7 @@
               </div>
             </div>
             <!-- Bar Chart -->
-            <div class="col-xs-12 col-lg-6">
+            <div class="col-6">
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
